@@ -1,7 +1,7 @@
 # Bugs:
-# Known Bugs during development: 20
-# Summary: open Bugs: 4
-#			fixed Bugs:17
+# Known Bugs during development: 24
+# Summary: open Bugs: 7
+#			fixed Bugs:18
 
 
 # #5 when using -f somtimes getting this:
@@ -13,3 +13,12 @@
 # #11 restore for permission during check does not work
 #
 # #21 in module compare.sh when file is delete but exlcuded the exclude pattern is not matching against this 
+# 
+# #22 journal is defective and is not excluded by backup, gitignore does not recognize absolute path
+#
+# #23 check_perms module when check in permssions these should trigger a new rsync
+#
+# #24 in exlude file names with whitespace gets not recognize
+# 
+# #25 exclude completely broken
+
