@@ -3,6 +3,7 @@ compare_etc()
 # fix problems with german umlauts
 # if already set do nothing
 git config --global core.quotepath false || :
+DATE=$(date +%F-%H-%M)
 
 echo "comparing backup directory with current working /etc directory ..."
 #delete old logfile if exising
@@ -33,19 +34,10 @@ if [ ! -s $BACKUPDIR/content.lst ]
 		rsync -rtpogq --delete -clis --exclude-from=$EXCLUDEFILE /etc/ $COMPAREDIR/etc/
 fi
 
-return_check=0
-
-if [ $DISABLE_PERMS == "1" ]
-		then
-			echo "permissions check is deactivated in your configuration file"
-			#leave this function without doing anything else
-		else
-			check_perms
-
-fi
-
 cd $COMPAREDIR
 git checkout master &> /dev/null
+
+echo "##$DATE" >> $JOURNAL
 
 echo "looking for differences ..."
 git_status_file="/tmp/git_status_file"
@@ -66,11 +58,11 @@ while read line
 				mod_file="${mod_file[*]}"				
 				if [ -z "$mod_file" ]
 					then
-						echo "modified file:" 
-						echo "$mod_file_S"
+						echo "++ modified file:" 
+						echo "+ $mod_file_S"
 					else
-						echo "modified file:" 
-						echo "${mod_file:0}"
+						echo "++ modified file:" 
+						echo "+ ${mod_file:0}"
 				fi				
 				IFS=$old_IFS
 
@@ -87,11 +79,11 @@ while read line
 				del_file="${del_file[*]}"
 				if [ -z "$del_file" ]
 					then
-						echo "deleted file:"
-						echo "$del_file_S"
+						echo "++ deleted file:"
+						echo "+ $del_file_S"
 					else
-						echo "deleted file:"
-						echo "${del_file:0}"
+						echo "++ deleted file:"
+						echo "+ ${del_file:0}"
 				fi
 				IFS=$old_IFS
 
@@ -110,11 +102,11 @@ while read line
 				ren_file="${ren_file[*]}"
 				if [ -z "$ren_file" ]
 					then
-						echo "renamed file:"
-						echo "$ren_file_S"
+						echo "++ renamed file:"
+						echo "+ $ren_file_S"
 					else
-						echo "renamed file:"
-						echo "${ren_file:0}"
+						echo "++ renamed file:"
+						echo "+ ${ren_file:0}"
 				fi
 				IFS=$old_IFS
 
@@ -124,8 +116,8 @@ while read line
 				old_IFS=$IFS
 				IFS=""
 				new_file="${new_file[*]}"
-				echo "new file:" 
-				echo "${new_file:0}"
+				echo "++ new file:" 
+				echo "+ ${new_file:0}"
 				old_IFS=$IFS
 
 				# TODO: print new files here and log to $LOGFILE
@@ -140,6 +132,19 @@ if [ ! -s $LOGFILE ]
 		rm $LOGFILE
 fi
 
+return_check=0
+if [ $DISABLE_PERMS == "1" ]
+		then
+			echo "permissions check is deactivated in your configuration file"
+			#leave this function without doing anything else
+			return_check=0
+		else
+			check_perms
+			return_check=$?
+
+fi
+
+
 echo "$has_changes"					
 echo "cleaning up ..."
 rm -rf $COMPAREDIR 
@@ -147,7 +152,7 @@ rm $git_status_file
 
 if [ $has_changes == "no" ]
 	then
-		echo "+++nothing changed+++"
+		echo "+++++ nothing changed +++++"
 fi		
 
 
